--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'
+    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.30'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
